<resources>
    <string name="app_name">Driverse</string>
    <string name="colon">%1$s:%2s</string>      <!-- TODO: not used, show hour in Ride and RideDetails-->
    <string name="slash">/</string>      <!-- TODO: not used, show date in RideDetails-->
    <string name="dash">-</string>

    <!-- LoginScreenActivity -->
    <string name="log_in_button">LOG IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <!-- MainActivity -->
    <string name="search_button_icon">&#xf002; Search</string>
    <string name="notifications_button_icon">&#xf01c; Notifications</string>
    <string name="publish_button_icon">&#xf1b9; Publish</string>
    <string name="profile_button_icon">&#xf2bd; Profile</string>


    <!-- ProfileFragment & Ride details -->
    <string name="search_message">Looking for a ride?</string>
    <string name="departure_point">Departure point</string>
    <string name="departure_point_radius">Departure point radius (m)</string>
    <string name="arrival_point">Arrival point</string>
    <string name="arrival_point_radius">Arrival point radius (m)</string>
    <string name="departure_hour">Departure hour</string>
    <string name="arrival_hour">Arrival hour</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="passengers_number">Number of passengers</string>
    <string name="available_seats">Available seats</string>
    <string name="price_per_seat">Price per seat</string>
    <string name="driver_name">Driver name</string> <!-- driver name, image, preferences and car repeated? -->
    <string name="driver_age">Driver age</string>
    <string name="trip_driver_image">Trip driver\'s image</string>
    <string name="driver_preferences">Driver preferences</string>
    <string name="driver_car">Driver car</string>
    <string name="search_travel_button">SEARCH</string>
    <string name="ride_details_message">Ride details</string>
    <string name="book_ride_button">BOOK</string>
    <string name="publish_ride_button">PUBLISH</string>
    <string name="publish_message">Share your ride</string>

    <!-- TODO: all of AvailableDaysOfWeek -->
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>

    <!-- User & Profile -->
    <string name="user_name">Name</string>
    <string name="user_birth_date">Birth Date</string>
    <string name="user_sur_name">Surname</string>
    <string name="user_email">Email</string>
    <string name="user_mobile_number">Mobile number</string>
    <string name="user_car">Car</string>
    <string name="user_preferences">Car</string>
    <string name="user_profile_image">Profile image</string>
    <string name="log_out_button">LOG OUT</string>
    <string name="profile_message">Profile page</string>

    <!-- Notifications Card -->
    <string name="card_message">Card message</string>
    <string name="notification_card_image">Notification card image</string>
    <string name="notifications_messages">Messages</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>


</resources>


