<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/fragment_profile_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_message"
                android:padding="5dp"
                android:text="" />

            <ImageView
                android:id="@+id/fragment_profile_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/user_profile_image" />

            <TextView
                android:id="@+id/fragment_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:text="" />

            <TextView
                android:id="@+id/fragment_profile_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_birth_date"
                android:text="" />

            <TextView
                android:id="@+id/fragment_profile_sur_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_sur_name"
                android:text="" />

            <TextView
                android:id="@+id/fragment_profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_email"
                android:text="" />

            <TextView
                android:id="@+id/fragment_profile_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_mobile_number"
                android:text="" />

            <TextView
                android:id="@+id/fragment_profile_car"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_car"
                android:text="" />

            <Button
                android:id="@+id/fragment_profile_log_out_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/log_out_button"
                android:text=""
                android:layout_gravity="center" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>

