<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/activity_login_screen_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:ems="30"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:text="" />

        <EditText
            android:id="@+id/activity_login_screen_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:ems="30"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="" />

        <Button
            android:id="@+id/activity_login_screen_log_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/log_in_button"
            android:text="" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>